--- a/Chatter/app/src/main/res/layout/fragment_main.xml
+++ b/Chatter/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,43 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:text="@string/app_name"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center"
+        android:padding="10dp"
+        android:id="@+id/tvTitle" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="A Location based chat service."
+        android:id="@+id/tvTagLine"
+        android:layout_below="@+id/tvTitle"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="Please enter a name"
+        android:ems="10"
+        android:id="@+id/etName"
+        android:gravity="center"
+        android:layout_below="@+id/tvTagLine"
+        android:layout_centerHorizontal="true"
+        android:padding="10dp"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Join the Conversation"
+        android:id="@+id/buttonEnterChat"
+        android:layout_below="@+id/etName"
+        android:layout_centerHorizontal="true"
+        android:padding="10dp"/>
 
 </RelativeLayout>
