--- a/Chatter/app/src/main/res/layout/fragment_chat_list.xml
+++ b/Chatter/app/src/main/res/layout/fragment_chat_list.xml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="io.bigbang.chatter.chatter.ChatFragment">
 
     <ListView android:id="@android:id/list" android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/buttonSend"
+        android:transcriptMode="alwaysScroll"
+        android:stackFromBottom="true"
+        />
 
     <TextView android:id="@android:id/empty" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:gravity="center" />
+        android:layout_height="match_parent" android:gravity="center"
+        android:layout_above="@+id/buttonSend" />
 
-</FrameLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send"
+        android:id="@+id/buttonSend"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/etChatText"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/buttonSend"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@android:id/list" />
+
+</RelativeLayout>
