--- a/Chatter/app/src/main/res/layout/fragment_main.xml
+++ b/Chatter/app/src/main/res/layout/fragment_main.xml
@@ -1,9 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+    android:paddingTop="50dp"
+    android:paddingBottom="50dp"
     tools:context=".MainActivity$PlaceholderFragment">
 
     <TextView
@@ -43,6 +42,7 @@
         android:id="@+id/buttonEnterChat"
         android:layout_below="@+id/etName"
         android:layout_centerHorizontal="true"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        />
 
 </RelativeLayout>
