--- a/Chatter/app/src/main/res/layout/fragment_chat_list.xml
+++ b/Chatter/app/src/main/res/layout/fragment_chat_list.xml
@@ -7,7 +7,8 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/buttonSend"
         android:transcriptMode="alwaysScroll"
-        android:stackFromBottom="true"
+        android:divider="@null"
+        android:dividerHeight="0dp"
         />
 
     <TextView android:id="@android:id/empty" android:layout_width="match_parent"
