--- a/Chatter/app/src/main/res/layout/list_row.xml
+++ b/Chatter/app/src/main/res/layout/list_row.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="fill_parent"
+android:layout_height="wrap_content"
+android:padding="8dp" >
+
+<!-- Name -->
+<TextView
+    android:id="@+id/tvName"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp" >
+    android:layout_marginTop="1dip"
+    android:text="Chris P"/>
 
-    <!-- Name -->
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dip"
-        android:text="Chris P"/>
+<!-- Message -->
+<TextView
+    android:id="@+id/tvMessage"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/tvName"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:textColor="#000000"
+    android:text="This is something that someone might say or something else"/>
 
-    <!-- Message -->
-    <TextView
-        android:id="@+id/tvMessage"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvName"
-        android:layout_marginTop="5dp"
-        android:textColor="#000000"
-        android:text="This is something that someone might say or something else"/>
-
-    <!-- Date -->
-    <!--<TextView-->
-        <!--android:id="@+id/tvDate"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:text="2:45PM "/>-->
+<TextView
+    android:id="@+id/tvDate"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="2:45PM "
+    android:layout_below="@+id/tvMessage"
+    android:layout_alignParentStart="true" />
 
 </RelativeLayout>
