--- a/Chatter/app/src/main/res/values/styles.xml
+++ b/Chatter/app/src/main/res/values/styles.xml
@@ -2,7 +2,21 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+
+        <!-- Support library compatibility -->
+        <item name="actionBarStyle">@style/MyActionBar</item>
+    </style>
+
+    <!-- ActionBar styles -->
+    <style name="MyActionBar"
+        parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">#1E88E5</item>
+
+        <!-- Support library compatibility -->
+        <item name="background">@drawable/ab_bottom_solid_apptheme</item>
     </style>
 
 </resources>
+
+
